--- a/src/igz_controls/components/sort-dropdown/sort-dropdown.tpl.html
+++ b/src/igz_controls/components/sort-dropdown/sort-dropdown.tpl.html
@@ -2,6 +2,7 @@
      data-is-open="$ctrl.isOpen">
     <div class="igz-action-item"
          data-ng-class="{'subtemplate-show': $ctrl.isOpen}"
+         data-ng-click="$ctrl.setValuesVisibility()"
          data-uib-dropdown-toggle>
         <span class="action-icon igz-icon-sort"></span>
     </div>
@@ -9,6 +10,7 @@
         data-ng-if="$ctrl.isOpen">
         <li class="dropdown-menu-item"
             data-ng-repeat="option in $ctrl.sortOptions"
+            data-ng-show="option.visible"
             data-ng-click="$ctrl.toggleSortingOrder(option)">
             <span class="item-name"
                   data-ng-class="$ctrl.getItemClass(option.active)">{{option.label}}</span>
