Commit for demo

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -147,7 +147,7 @@
 
     .validation-pop-up {
         position: absolute;
-        bottom: 37px;
+        top: 37px;
         border-radius: 3px;
         box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
         background-color: @white;
