[Browse] HTML viewer displays incorrect for small browser resolution

--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -304,3 +304,13 @@
         }
     }
 }
+
+@media screen and (max-width: 1268px) {
+    .ngdialog-theme-iguazio {
+        &.iframe-dialog {
+            .ngdialog-content {
+                max-width: 900px;
+            }
+        }
+    }
+}
