--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
@@ -48,6 +48,12 @@
                         padding: 0;
                     }
                 }
+
+                .ncl-version-configuration-labels, .ncl-version-configuration-annotations {
+                    .more-info-wrapper {
+                        height: 20px;
+                    }
+                }
             }
         }
     }
