--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -155,8 +155,27 @@
         z-index: 4;
 
         .validation-rule {
+            margin: 10px auto;
+            line-height: 1.2;
+            display: flex;
+            flex-flow: row nowrap;
+
             .validation-rule-icon {
                 margin-right: 8px;
+                padding-top: 3px;
+                flex: none;
+            }
+
+            .validation-rule-label {
+                flex: auto;
+
+                &.validation-rule-valid {
+                    color: @pale-grey;
+                }
+
+                &.validation-rule-invalid {
+                    color: @dusk-three;
+                }
             }
 
             .validation-rule-valid {
