--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -11,6 +11,7 @@
                                             data-is-focused="true"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
+                                            data-validation-rules="$ctrl.validationRules['itemName']"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_NAME' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="name"
@@ -80,6 +81,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
+                                            data-validation-rules="$ctrl.validationRules['itemPath']"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_MOUNT_PATH' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volumeMount.mountPath"
@@ -125,6 +127,8 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
+                                            data-validation-max-length="128"
+                                            data-validation-pattern="$ctrl.containerNameValidationPattern"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_CONTAINER_NAME' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.container"
@@ -146,6 +150,7 @@
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="false"
+                                            data-validation-max-length="255"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_PATH_IN_CONTAINER' | i18next }}"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.flexVolume.options.subPath"
