Impl [General] Improve alignment of validation rule icon to text

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -159,10 +159,10 @@
             line-height: 1.2;
             display: flex;
             flex-flow: row nowrap;
+            align-items: baseline;
 
             .validation-rule-icon {
                 margin-right: 8px;
-                padding-top: 3px;
                 flex: none;
             }
 
