--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -3,6 +3,7 @@
     <div data-ng-if="$ctrl.fieldType === 'input'">
         <div class="validation-icon"
              data-ng-if="$ctrl.validationRules.length > 0"
+             data-ng-mousedown="$ctrl.preventInputBlur = true"
              data-ng-class="{'igz-icon-verify-info': $ctrl.inputIsTouched && $ctrl.data === '',
                              'igz-icon-verify-error': $ctrl.isValueInvalid() && $ctrl.data !== '',
                              'igz-icon-verify-ok': !$ctrl.isValueInvalid() && $ctrl.data !== ''}">
@@ -24,7 +25,7 @@
                data-ng-maxlength="$ctrl.validationMaxLength"
                data-ng-pattern="$ctrl.validationPattern"
                data-ng-focus="$ctrl.focusInput()"
-               data-ng-blur="$ctrl.unfocusInput()"
+               data-ng-blur="$ctrl.unfocusInput($event)"
                data-ng-change="$ctrl.updateInputValue()"
                data-ng-disabled="$ctrl.isDisabled"
                data-ng-keydown="$ctrl.keyDown($event)"
