[General] igzValidatingInputField: text overlaps validation icon

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -110,6 +110,10 @@
         &.with-icon {
             padding: 0 10px 0 32px;
         }
+
+        &.with-validation-icon {
+            padding: 0 32px 0 10px;
+        }
     }
 
     .textarea-field {
@@ -244,10 +248,6 @@
 
     &.with-counter {
         margin-bottom: 20px;
-
-        .input-field {
-            padding: 0 32px 0 10px;
-        }
 
         .textarea-field {
             padding: 7px 30px 6px 10px;
