[Services] Jupyter: add PVCs

--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -101,6 +101,17 @@
                             }
                         }
                     }
+
+                    .default-dropdown {
+                        .default-dropdown-field {
+                            background-color: @white;
+                            border-radius: 0;
+                        }
+
+                        .default-dropdown-container {
+                            z-index: 100;
+                        }
+                    }
                 }
             }
 
