--- a/src/igz_controls/components/action-item/action-item.tpl.html
+++ b/src/igz_controls/components/action-item/action-item.tpl.html
@@ -5,7 +5,7 @@
      'divider': $ctrl.action.id === 'divider'}"
      data-ng-click="$ctrl.onClickAction($event)"
      data-ng-if="$ctrl.template !== 'additional'"
-     data-uib-tooltip="{{$ctrl.action.label}}"
+     data-uib-tooltip="{{$ctrl.getTooltipText()}}"
      data-tooltip-popup-delay="1000"
      data-tooltip-placement="bottom"
      data-tooltip-append-to-body="true">
